# TrinityChain

./: .gitignore  .renderignore  BITCOIN_FEATURES.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_PLAN.md  GEMINI.md  LICENSE  PERFORMANCE_OPTIMIZATIONS.md  PROJECT_STATUS.md  README.md  SECURITY.md  browser_test.js  build.rs  config.toml  index.html  nohup.out  render.yaml  shortcuts.sh  test_api.sh  test_dashboard.py  trinitychain_whitepaper (1).md  tunnel.js  vercel.json
.github/: pull_request_template.md
cli/: Cargo.toml
core/: Cargo.toml
dashboard/: README.md  app.js  index.html  package-lock.json  package.json  style.css  vite.config.js  wallet.js
documentation/: API_ENDPOINTS.md  ARCHITECTURE.md  ARCHITECTURE_CLEANUP.md  ARCHITECTURE_MOC.md  AUDIT_FIXES.md  BITCOIN_FEATURES.md  CLEANUP_COMPLETE.md  CLI_MIGRATION_SUMMARY.md  CLI_REFERENCE.md  DASHBOARD_CLI_IMPLEMENTATION.md  DASHBOARD_FEATURES.md  DASHBOARD_INTEGRATION.md  DASHBOARD_TESTING.md  DEVELOPER_GUIDE.md  DEVELOPMENT_PLAN.md  GETTING_CONTRIBUTORS.md  MODULE_GUIDE.md  NODE_SETUP.md  P2P_NETWORK_SETUP.md  QUICKSTART.md  README.md  SECURITY.md  SHORTCUTS.md  TRIANGLE_UTXO_AUDIT.md
network/: Cargo.toml
scripts/: quickstart.sh  rename-project.sh
src/: addressbook.rs  ai_validation.rs  api.rs  blockchain.rs  cache.rs  cli.rs  config.rs  crypto.rs  discovery.rs  error.rs  fees.rs  geometry.rs  hdwallet.rs  lib.rs  mempool.rs  miner.rs  network.rs  persistence.rs  security.rs  sync.rs  transaction.rs  wallet.rs
static/: index.html
tests/: wallet_and_transactions.rs
wallet/: Cargo.toml
(+19 files in other folders)
